MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/RoundRobinAssignmentMatrix__c.object-meta.xml
<CustomObject>
    <description>This object is used to setup sales executive skills and availability for the Round Robin assignment of the lead records</description>
    <label>Round Robin Assignment Matrix</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Round Robin Assignment Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Assignment Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>