MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>