MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/CurrentLoad__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoad__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>