MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/LastAssignmentTime__c.field-meta.xml
<CustomField>
    <fullName>LastAssignmentTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Assignment Time</label>
    <type>DateTime</type>
</CustomField>