MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker Portal</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Management Lead</fullName>
            </value>
            <value>
                <fullName>3DS Interactive</fullName>
            </value>
            <value>
                <fullName>KSA</fullName>
            </value>
            <value>
                <fullName>800-Modon</fullName>
            </value>
            <value>
                <fullName>Webinar Registration Landing Page_9th Ap</fullName>
            </value>
            <value>
                <fullName>General Public Sales Launch</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Real Estate Centre (ADREC)</fullName>
            </value>
            <value>
                <fullName>Roadshows/Trade Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>