MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave To Date</label>
    <type>Date</type>
</CustomField>