MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/User_Queue__c.field-meta.xml
<CustomField>
    <fullName>User_Queue__c</fullName>
    <label>User Queue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM Registration Service</fullName>
            </value>
            <value>
                <fullName>Broker Enquiry</fullName>
            </value>
            <value>
                <fullName>Call Center Queue</fullName>
            </value>
            <value>
                <fullName>CC Executive</fullName>
            </value>
            <value>
                <fullName>CM Operation Team</fullName>
            </value>
            <value>
                <fullName>Contact_Centre</fullName>
                <label>Contact Centre</label>
            </value>
            <value>
                <fullName>Customer Management Team</fullName>
            </value>
            <value>
                <fullName>Default_Collection</fullName>
                <label>Default &amp; Collection</label>
            </value>
            <value>
                <fullName>Financial Service</fullName>
            </value>
            <value>
                <fullName>Front Liner</fullName>
            </value>
            <value>
                <fullName>Joint Owner Addition/Deletion Off Plan</fullName>
            </value>
            <value>
                <fullName>Post_Sales</fullName>
                <label>Post Sales</label>
            </value>
            <value>
                <fullName>Property Transfer Off Plan</fullName>
            </value>
            <value>
                <fullName>Property Transfer Services</fullName>
            </value>
            <value>
                <fullName>Real_Estate_Services</fullName>
                <label>Real Estate Services</label>
            </value>
            <value>
                <fullName>Registration Team</fullName>
            </value>
            <value>
                <fullName>Sales Team Queue</fullName>
            </value>
            <value>
                <fullName>Sales Ops Queue</fullName>
            </value>
            <value>
                <fullName>Customer Management Queue</fullName>
            </value>
            <value>
                <fullName>Finance Queue</fullName>
            </value>
            <value>
                <fullName>ADM Registration</fullName>
                <isActive>false</isActive>
                <label>ADM Registration</label>
            </value>
            <value>
                <fullName>Abu Dhabi Municipality</fullName>
                <isActive>false</isActive>
                <label>Abu Dhabi Municipality</label>
            </value>
            <value>
                <fullName>Customer Management Team Manager</fullName>
                <isActive>false</isActive>
                <label>Customer Management Team Manager</label>
            </value>
            <value>
                <fullName>Defects Liability Period</fullName>
                <isActive>false</isActive>
                <label>Defects Liability Period</label>
            </value>
            <value>
                <fullName>Department Champ</fullName>
                <isActive>false</isActive>
                <label>Department Champ</label>
            </value>
            <value>
                <fullName>Duplicate Queue</fullName>
                <isActive>false</isActive>
                <label>Duplicate Queue</label>
            </value>
            <value>
                <fullName>Joint Owner Addition</fullName>
                <isActive>false</isActive>
                <label>Joint Owner Addition</label>
            </value>
            <value>
                <fullName>Joint Owner Removal</fullName>
                <isActive>false</isActive>
                <label>Joint Owner Removal</label>
            </value>
            <value>
                <fullName>Owner Transfer</fullName>
                <isActive>false</isActive>
                <label>Owner Transfer</label>
            </value>
            <value>
                <fullName>Property Handover</fullName>
                <isActive>false</isActive>
                <label>Property Handover</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>