MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center User</fullName>
            </value>
            <value>
                <fullName>Sales User</fullName>
                <default>true</default>
                <label>Sales User</label>
            </value>
            <value>
                <fullName>ReemHill Call Center User</fullName>
            </value>
            <value>
                <fullName>International Broker Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>