MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>UserType__c</columns>
    <columns>Language__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Status__c</columns>
    <columns>Threshold__c</columns>
    <columns>CurrentLoad__c</columns>
    <columns>LastAssignmentTime__c</columns>
    <columns>Application_Type__c</columns>
    <columns>User_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>