MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/listViews/Call_Center_Offline.listView-meta.xml
<ListView>
    <fullName>Call_Center_Offline</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>User__c</columns>
    <columns>UserType__c</columns>
    <columns>CurrentLoad__c</columns>
    <columns>LastAssignmentTime__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Status__c</columns>
    <columns>Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserType__c</field>
        <operation>equals</operation>
        <value>Call Center User</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Offline</value>
    </filters>
    <label>Call Center - Offline</label>
</ListView>