MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/listViews/Case_View_Post_Sales.listView-meta.xml
<ListView>
    <fullName>Case_View_Post_Sales</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>UserType__c</columns>
    <columns>Language__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Status__c</columns>
    <columns>Threshold__c</columns>
    <columns>CurrentLoad__c</columns>
    <columns>LastAssignmentTime__c</columns>
    <columns>Application_Type__c</columns>
    <columns>User_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Type__c</field>
        <operation>equals</operation>
        <value>Service Cloud</value>
    </filters>
    <filters>
        <field>User_Queue__c</field>
        <operation>includes</operation>
        <value>Post Sales</value>
    </filters>
    <label>Case View - Post Sales</label>
    <sharedTo>
        <group>Case_List_View_Real_Estate_Services</group>
    </sharedTo>
</ListView>