MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/listViews/Lead_View.listView-meta.xml
<ListView>
    <fullName>Lead_View</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CurrentLoad__c</columns>
    <columns>Language__c</columns>
    <columns>LastAssignmentTime__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Leave_Today__c</columns>
    <columns>Status__c</columns>
    <columns>User_Queue__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>Lead View</label>
</ListView>