MODON MRE BPDEV/force-app/main/default/objects/RoundRobinAssignmentMatrix__c/listViews/Sales_Operation.listView-meta.xml
<ListView>
    <fullName>Sales_Operation</fullName>
    <columns>NAME</columns>
    <columns>Application_Type__c</columns>
    <columns>LastAssignmentTime__c</columns>
    <columns>LeadSource__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Threshold__c</columns>
    <columns>CurrentLoad__c</columns>
    <columns>User_Queue__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserType__c</field>
        <operation>equals</operation>
        <value>Sales User</value>
    </filters>
    <label>Sales Operation</label>
</ListView>